# rsnote

./: Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  main.rs  note.rs
test/: note.test.rs
