[package]
name = "rsnote"
version = "0.1.0"
authors = ["shuyoou@outlook.com"]
description = "A command-line note-taking app written in Rust"
license = "MIT"
keywords = ["note", "note taking", "command line", "cli"]
categories = ["tools"]
edition = "2024"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
chrono = "0.4.31"

[dev-dependencies]


